--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -42,12 +42,12 @@ layer(base);
   --color-black: #101828;
 
   --color-brand-25: #f2f7ff;
-  --color-brand-50: #ecf3ff;
+  --color-brand-50: rgba(248, 238, 15, 0.4);
   --color-brand-100: #dde9ff;
   --color-brand-200: #c2d6ff;
   --color-brand-300: #9cb9ff;
   --color-brand-400: #7592ff;
-  --color-brand-500: #465fff;
+  --color-brand-500: black;
   --color-brand-600: #3641f5;
   --color-brand-700: #2a31d8;
   --color-brand-800: #252dae;
@@ -70,7 +70,7 @@ layer(base);
   --color-gray-25: #fcfcfd;
   --color-gray-50: #f9fafb;
   --color-gray-100: #f2f4f7;
-  --color-gray-200: #e4e7ec;
+  --color-gray-200: #f8ee0f;
   --color-gray-300: #d0d5dd;
   --color-gray-400: #98a2b3;
   --color-gray-500: #667085;
